compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__dead_code_elimination_visitor__test__dead_code_snapshot_tests@call_function_in_expr.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/dead_code_elimination_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/dead_code/call_function_in_expr.tapir
---
{
    add(2,5,);
}

fn add(int,int,) -> (int,) {
    return ((x + y),);
}
