compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__dead_code_elimination_visitor__test__dead_code_snapshot_tests@if_diverge.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/dead_code_elimination_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/dead_code/if_diverge.tapir
---
# @toplevel: {"FunctionId(0)"}

var x = 5; # {"SymbolId(3)"}
var y = 4; # {"SymbolId(4)"}
{
    y = x; # {"SymbolId(4)"}
}
int_prop = y; # {"SymbolId(0)"}
