compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__dead_code_elimination_visitor__test__dead_code_snapshot_tests@simple.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/dead_code_elimination_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/dead_code/simple.tapir
---
# @toplevel: {"FunctionId(0)"}

# {"SymbolId(0)"}
int_prop = 5;
